data/derived/comb/progs/unify/prog0770.ml.out
Characters 90-93:
  | h::t -> (helper t l (acc::h)) in
                         ^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
